Add wrapper instructions
